hw4/j0gram.output
Terminals unused in grammar

    CASE
    CONTINUE
    DEFAULT
    INSTANCEOF
    LONG
    SWITCH
    NOT_RESERVED
    TYPE_CAST
    CHAR_ERROR
    INT_ERROR
    UNKNOWN
    STRING_ERROR
    OPEN_COMMENT
    THEN
    ':'


State 23 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce


Grammar

    0 $accept: ClassDecl $end

    1 ClassDecl: PUBLIC CLASS IDENTIFIER ClassBody

    2 ClassBody: '{' ClassBodyDecls '}'
    3          | '{' '}'

    4 ClassBodyDecls: ClassBodyDecl
    5               | ClassBodyDecls ClassBodyDecl

    6 ClassBodyDecl: FieldDecl
    7              | FieldDeclAssign
    8              | MethodDecl
    9              | ConstructorDecl

   10 FieldDecl: Type VarDecls ';'
   11          | PUBLIC STATIC Type VarDecls ';'

   12 FieldDeclAssign: Type VarDeclarator '=' Literal ';'
   13                | PUBLIC STATIC Type VarDeclarator '=' Literal ';'

   14 Type: INT
   15     | DOUBLE
   16     | BOOLEAN
   17     | FLOAT
   18     | STRING
   19     | CHAR
   20     | Name

   21 Name: IDENTIFIER
   22     | QualifiedName

   23 QualifiedName: IDENTIFIER '.' Name

   24 VarDecls: VarDeclarator
   25         | VarDecls ',' VarDeclarator

   26 VarDeclarator: IDENTIFIER
   27              | VarDeclarator '[' ']'

   28 MethodReturnVal: Type
   29                | VOID

   30 MethodDecl: MethodHeader Block

   31 MethodHeader: PUBLIC STATIC MethodReturnVal MethodDeclarator
   32             | PUBLIC MethodReturnVal MethodDeclarator
   33             | STATIC MethodReturnVal MethodDeclarator
   34             | MethodReturnVal MethodDeclarator

   35 MethodDeclarator: IDENTIFIER '(' FormalParmListOpt ')'

   36 FormalParmListOpt: FormalParmList
   37                  | %empty

   38 FormalParmList: FormalParm
   39               | FormalParmList ',' FormalParm

   40 FormalParm: Type VarDeclarator

   41 ConstructorDecl: ConstructorDeclarator Block

   42 ConstructorDeclarator: IDENTIFIER '(' FormalParmListOpt ')'

   43 ArgListOpt: ArgList
   44           | %empty

   45 Block: '{' BlockStmtsOpt '}'

   46 BlockStmtsOpt: BlockStmts
   47              | %empty

   48 BlockStmts: BlockStmt
   49           | BlockStmts BlockStmt

   50 BlockStmt: LocalVarDeclStmt
   51          | Stmt

   52 LocalVarDeclStmt: LocalVarDecl ';'

   53 LocalVarDecl: Type VarDecls

   54 Stmt: Block
   55     | ';'
   56     | ExprStmt
   57     | BreakStmt
   58     | ReturnStmt
   59     | IfThenStmt
   60     | IfThenElseStmt
   61     | IfThenElseIfStmt
   62     | WhileStmt
   63     | ForStmt

   64 ExprStmt: StmtExpr ';'

   65 StmtExpr: Assignment
   66         | MethodCall
   67         | InstantiationExpr

   68 IfThenStmt: IF '(' Expr ')' Block

   69 IfThenElseStmt: IF '(' Expr ')' Block ELSE Block

   70 IfThenElseIfStmt: IF '(' Expr ')' Block ElseIfSequence
   71                 | IF '(' Expr ')' Block ElseIfSequence ELSE Block

   72 ElseIfSequence: ElseIfStmt
   73               | ElseIfSequence ElseIfStmt

   74 ElseIfStmt: ELSE IfThenStmt

   75 WhileStmt: WHILE '(' Expr ')' Stmt

   76 ForStmt: FOR '(' ForInit ';' ExprOpt ';' ForUpdate ')' Block

   77 ForInit: StmtExprList
   78        | LocalVarDecl
   79        | %empty

   80 ExprOpt: Expr
   81        | %empty

   82 ForUpdate: StmtExprList
   83          | %empty

   84 StmtExprList: StmtExpr
   85             | StmtExprList ',' StmtExpr

   86 BreakStmt: BREAK ';'
   87          | BREAK IDENTIFIER ';'

   88 ReturnStmt: RETURN ExprOpt ';'

   89 Primary: Literal
   90        | '(' Expr ')'
   91        | FieldAccess
   92        | MethodCall

   93 Literal: INTEGER_LITERAL
   94        | FLOAT_LITERAL
   95        | BOOLEAN_LITERAL
   96        | STRING_LITERAL
   97        | NULLVAL
   98        | CHARACTER_LITERAL

   99 InstantiationExpr: NEW Name '(' ArgListOpt ')'

  100 ArgList: Expr
  101        | ArgList ',' Expr

  102 FieldAccess: Primary '.' IDENTIFIER

  103 MethodCall: Name '(' ArgListOpt ')'
  104           | Name '{' ArgListOpt '}'
  105           | Primary '.' IDENTIFIER '(' ArgListOpt ')'
  106           | Primary '.' IDENTIFIER '{' ArgListOpt '}'

  107 PostFixExpr: Primary
  108            | Name

  109 UnaryExpr: '-' UnaryExpr
  110          | '!' UnaryExpr
  111          | PostFixExpr

  112 MulExpr: UnaryExpr
  113        | MulExpr '*' UnaryExpr
  114        | MulExpr '/' UnaryExpr
  115        | MulExpr '%' UnaryExpr

  116 AddExpr: MulExpr
  117        | AddExpr '+' MulExpr
  118        | AddExpr '-' MulExpr

  119 RelOp: LESS_EQUAL
  120      | GREATER_EQUAL
  121      | '<'
  122      | '>'

  123 RelExpr: AddExpr
  124        | RelExpr RelOp AddExpr

  125 EqExpr: RelExpr
  126       | EqExpr EQUAL RelExpr
  127       | EqExpr NOT_EQUAL RelExpr

  128 CondAndExpr: EqExpr
  129            | CondAndExpr LOGIC_AND EqExpr

  130 CondOrExpr: CondAndExpr
  131           | CondOrExpr LOGIC_OR CondAndExpr

  132 Expr: CondOrExpr
  133     | Assignment

  134 Assignment: LeftHandSide AssignOp Expr
  135           | LeftHandSide AssignOp
  136           | Type VarDeclarator AssignOp Expr

  137 LeftHandSide: Name
  138             | FieldAccess

  139 AssignOp: '='
  140         | INCREMENT
  141         | DECREMENT


Terminals, with rules where they appear

    $end (0) 0
    '!' <treeptr> (33) 110
    '%' <treeptr> (37) 115
    '(' <treeptr> (40) 35 42 68 69 70 71 75 76 90 99 103 105
    ')' <treeptr> (41) 35 42 68 69 70 71 75 76 90 99 103 105
    '*' <treeptr> (42) 113
    '+' <treeptr> (43) 117
    ',' <treeptr> (44) 25 39 85 101
    '-' <treeptr> (45) 109 118
    '.' <treeptr> (46) 23 102 105 106
    '/' <treeptr> (47) 114
    ':' <treeptr> (58)
    ';' <treeptr> (59) 10 11 12 13 52 55 64 76 86 87 88
    '<' <treeptr> (60) 121
    '=' <treeptr> (61) 12 13 139
    '>' <treeptr> (62) 122
    '[' <treeptr> (91) 27
    ']' <treeptr> (93) 27
    '{' (123) 2 3 45 104 106
    '}' (125) 2 3 45 104 106
    error (256)
    BREAK <treeptr> (258) 86 87
    DOUBLE <treeptr> (259) 15
    ELSE <treeptr> (260) 69 71 74
    FOR <treeptr> (261) 76
    IF <treeptr> (262) 68 69 70 71
    INT <treeptr> (263) 14
    RETURN <treeptr> (264) 88
    VOID <treeptr> (265) 29
    WHILE <treeptr> (266) 75
    CLASS <treeptr> (267) 1
    STRING <treeptr> (268) 18
    BOOLEAN <treeptr> (269) 16
    CASE <treeptr> (270)
    CHAR <treeptr> (271) 19
    CONTINUE <treeptr> (272)
    DEFAULT <treeptr> (273)
    FLOAT <treeptr> (274) 17
    INSTANCEOF <treeptr> (275)
    LONG <treeptr> (276)
    NEW <treeptr> (277) 99
    SWITCH <treeptr> (278)
    NOT_RESERVED <treeptr> (279)
    PUBLIC <treeptr> (280) 1 11 13 31 32
    STATIC <treeptr> (281) 11 13 31 33
    IDENTIFIER <treeptr> (282) 1 21 23 26 35 42 87 102 105 106
    INTEGER_LITERAL <treeptr> (283) 93
    FLOAT_LITERAL <treeptr> (284) 94
    STRING_LITERAL <treeptr> (285) 96
    BOOLEAN_LITERAL <treeptr> (286) 95
    NULLVAL <treeptr> (287) 97
    CHARACTER_LITERAL <treeptr> (288) 98
    INCREMENT <treeptr> (289) 140
    DECREMENT <treeptr> (290) 141
    TYPE_CAST <treeptr> (291)
    LESS_EQUAL <treeptr> (292) 119
    GREATER_EQUAL <treeptr> (293) 120
    EQUAL <treeptr> (294) 126
    NOT_EQUAL <treeptr> (295) 127
    LOGIC_AND <treeptr> (296) 129
    LOGIC_OR <treeptr> (297) 131
    CHAR_ERROR <treeptr> (298)
    INT_ERROR <treeptr> (299)
    UNKNOWN <treeptr> (300)
    STRING_ERROR <treeptr> (301)
    OPEN_COMMENT <treeptr> (302)
    THEN <treeptr> (303)


Nonterminals, with rules where they appear

    $accept (68)
        on left: 0
    ClassDecl <treeptr> (69)
        on left: 1
        on right: 0
    ClassBody <treeptr> (70)
        on left: 2 3
        on right: 1
    ClassBodyDecls <treeptr> (71)
        on left: 4 5
        on right: 2 5
    ClassBodyDecl <treeptr> (72)
        on left: 6 7 8 9
        on right: 4 5
    FieldDecl <treeptr> (73)
        on left: 10 11
        on right: 6
    FieldDeclAssign <treeptr> (74)
        on left: 12 13
        on right: 7
    Type <treeptr> (75)
        on left: 14 15 16 17 18 19 20
        on right: 10 11 12 13 28 40 53 136
    Name <treeptr> (76)
        on left: 21 22
        on right: 20 23 99 103 104 108 137
    QualifiedName <treeptr> (77)
        on left: 23
        on right: 22
    VarDecls <treeptr> (78)
        on left: 24 25
        on right: 10 11 25 53
    VarDeclarator <treeptr> (79)
        on left: 26 27
        on right: 12 13 24 25 27 40 136
    MethodReturnVal <treeptr> (80)
        on left: 28 29
        on right: 31 32 33 34
    MethodDecl <treeptr> (81)
        on left: 30
        on right: 8
    MethodHeader <treeptr> (82)
        on left: 31 32 33 34
        on right: 30
    MethodDeclarator <treeptr> (83)
        on left: 35
        on right: 31 32 33 34
    FormalParmListOpt <treeptr> (84)
        on left: 36 37
        on right: 35 42
    FormalParmList <treeptr> (85)
        on left: 38 39
        on right: 36 39
    FormalParm <treeptr> (86)
        on left: 40
        on right: 38 39
    ConstructorDecl <treeptr> (87)
        on left: 41
        on right: 9
    ConstructorDeclarator <treeptr> (88)
        on left: 42
        on right: 41
    ArgListOpt <treeptr> (89)
        on left: 43 44
        on right: 99 103 104 105 106
    Block <treeptr> (90)
        on left: 45
        on right: 30 41 54 68 69 70 71 76
    BlockStmtsOpt <treeptr> (91)
        on left: 46 47
        on right: 45
    BlockStmts <treeptr> (92)
        on left: 48 49
        on right: 46 49
    BlockStmt <treeptr> (93)
        on left: 50 51
        on right: 48 49
    LocalVarDeclStmt <treeptr> (94)
        on left: 52
        on right: 50
    LocalVarDecl <treeptr> (95)
        on left: 53
        on right: 52 78
    Stmt <treeptr> (96)
        on left: 54 55 56 57 58 59 60 61 62 63
        on right: 51 75
    ExprStmt <treeptr> (97)
        on left: 64
        on right: 56
    StmtExpr <treeptr> (98)
        on left: 65 66 67
        on right: 64 84 85
    IfThenStmt <treeptr> (99)
        on left: 68
        on right: 59 74
    IfThenElseStmt <treeptr> (100)
        on left: 69
        on right: 60
    IfThenElseIfStmt <treeptr> (101)
        on left: 70 71
        on right: 61
    ElseIfSequence <treeptr> (102)
        on left: 72 73
        on right: 70 71 73
    ElseIfStmt <treeptr> (103)
        on left: 74
        on right: 72 73
    WhileStmt <treeptr> (104)
        on left: 75
        on right: 62
    ForStmt <treeptr> (105)
        on left: 76
        on right: 63
    ForInit <treeptr> (106)
        on left: 77 78 79
        on right: 76
    ExprOpt <treeptr> (107)
        on left: 80 81
        on right: 76 88
    ForUpdate <treeptr> (108)
        on left: 82 83
        on right: 76
    StmtExprList <treeptr> (109)
        on left: 84 85
        on right: 77 82 85
    BreakStmt <treeptr> (110)
        on left: 86 87
        on right: 57
    ReturnStmt <treeptr> (111)
        on left: 88
        on right: 58
    Primary <treeptr> (112)
        on left: 89 90 91 92
        on right: 102 105 106 107
    Literal <treeptr> (113)
        on left: 93 94 95 96 97 98
        on right: 12 13 89
    InstantiationExpr <treeptr> (114)
        on left: 99
        on right: 67
    ArgList <treeptr> (115)
        on left: 100 101
        on right: 43 101
    FieldAccess <treeptr> (116)
        on left: 102
        on right: 91 138
    MethodCall <treeptr> (117)
        on left: 103 104 105 106
        on right: 66 92
    PostFixExpr <treeptr> (118)
        on left: 107 108
        on right: 111
    UnaryExpr <treeptr> (119)
        on left: 109 110 111
        on right: 109 110 112 113 114 115
    MulExpr <treeptr> (120)
        on left: 112 113 114 115
        on right: 113 114 115 116 117 118
    AddExpr <treeptr> (121)
        on left: 116 117 118
        on right: 117 118 123 124
    RelOp <treeptr> (122)
        on left: 119 120 121 122
        on right: 124
    RelExpr <treeptr> (123)
        on left: 123 124
        on right: 124 125 126 127
    EqExpr <treeptr> (124)
        on left: 125 126 127
        on right: 126 127 128 129
    CondAndExpr <treeptr> (125)
        on left: 128 129
        on right: 129 130 131
    CondOrExpr <treeptr> (126)
        on left: 130 131
        on right: 131 132
    Expr <treeptr> (127)
        on left: 132 133
        on right: 68 69 70 71 75 80 90 100 101 134 136
    Assignment <treeptr> (128)
        on left: 134 135 136
        on right: 65 133
    LeftHandSide <treeptr> (129)
        on left: 137 138
        on right: 134 135
    AssignOp <treeptr> (130)
        on left: 139 140 141
        on right: 134 135 136


State 0

    0 $accept: . ClassDecl $end

    PUBLIC  shift, and go to state 1

    ClassDecl  go to state 2


State 1

    1 ClassDecl: PUBLIC . CLASS IDENTIFIER ClassBody

    CLASS  shift, and go to state 3


State 2

    0 $accept: ClassDecl . $end

    $end  shift, and go to state 4


State 3

    1 ClassDecl: PUBLIC CLASS . IDENTIFIER ClassBody

    IDENTIFIER  shift, and go to state 5


State 4

    0 $accept: ClassDecl $end .

    $default  accept


State 5

    1 ClassDecl: PUBLIC CLASS IDENTIFIER . ClassBody

    '{'  shift, and go to state 6

    ClassBody  go to state 7


State 6

    2 ClassBody: '{' . ClassBodyDecls '}'
    3          | '{' . '}'

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    VOID        shift, and go to state 10
    STRING      shift, and go to state 11
    BOOLEAN     shift, and go to state 12
    CHAR        shift, and go to state 13
    FLOAT       shift, and go to state 14
    PUBLIC      shift, and go to state 15
    STATIC      shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    '}'         shift, and go to state 18

    ClassBodyDecls         go to state 19
    ClassBodyDecl          go to state 20
    FieldDecl              go to state 21
    FieldDeclAssign        go to state 22
    Type                   go to state 23
    Name                   go to state 24
    QualifiedName          go to state 25
    MethodReturnVal        go to state 26
    MethodDecl             go to state 27
    MethodHeader           go to state 28
    ConstructorDecl        go to state 29
    ConstructorDeclarator  go to state 30


State 7

    1 ClassDecl: PUBLIC CLASS IDENTIFIER ClassBody .

    $default  reduce using rule 1 (ClassDecl)


State 8

   15 Type: DOUBLE .

    $default  reduce using rule 15 (Type)


State 9

   14 Type: INT .

    $default  reduce using rule 14 (Type)


State 10

   29 MethodReturnVal: VOID .

    $default  reduce using rule 29 (MethodReturnVal)


State 11

   18 Type: STRING .

    $default  reduce using rule 18 (Type)


State 12

   16 Type: BOOLEAN .

    $default  reduce using rule 16 (Type)


State 13

   19 Type: CHAR .

    $default  reduce using rule 19 (Type)


State 14

   17 Type: FLOAT .

    $default  reduce using rule 17 (Type)


State 15
